# slot-machine

./: Cargo.toml  README.md  slot_machine_esplained.md
80days-web/: Cargo.toml  geolocations.json  index.old  main.rs
80days-web/html/: index.html
docs/: atwi80d_esplained.md
old/: globe-spinner.jsx  slot-machine-v2.jsx  slot-machine-v5.1-[full_comments].jsx  slot-machine-v5.2.jsx  slot-machine-v5.jsx
src/: atwi80d-ui.jsx  main.rs  slot-machine-v3.jsx  slot-machine-v4.jsx  slot-machine.jsx
